installed tsc and typescript

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -5,5 +5,9 @@
   },
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "tsc": "^2.0.4",
+    "typescript": "^5.4.2"
+  }
 }
