--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node src/index.ts",
-    "build": "tsc",
+    "test": "ts-node src/index.ts",
+    "dev": "tsc -b && node dist/index.js",
+    "build": "tsc -b",
     "start": "node dist/index.js"
   },
   "devDependencies": {
